--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
+.text-center {
+  text-align: center;
+}
+
+#table {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#table td, #table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+/*#table tr:nth-child(even){background-color: #f2f2f2;}*/
+
+#table tr:hover {background-color: #ddd;}
+
+#table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
+
+.float_right{
+  float: right;
+}
+.m5 {margin: 5px;}
+.m10{margin: 10px;}
+
+
+
+.mt10{margin-top: 10px;}
+.mt20{margin-top: 20px;}
+.mt50 {margin-top: 50px;}
+
+.mb10{margin-bottom: 10px;}
+.mb20{margin-bottom: 20px;}
+
+.p5 {padding: 5px;}
+.p10 {padding: 10px;}
